--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-dark bg-dark ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Day-Planner</a>
+                <div class="d-flex justify-content-sm-start">
+                    <a class="navbar-brand" href="#">Day-Planner</a>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <button type="button" class="btn btn-outline-info">Full Week</button>
+                    <button type="button" class="btn btn-outline-info">Monday</button>
+                    <button type="button" class="btn btn-outline-info">Tuesday</button>
+                    <button type="button" class="btn btn-outline-info">Wednesday</button>
+                    <button type="button" class="btn btn-outline-info">Thursday</button>
+                    <button type="button" class="btn btn-outline-info">Friday</button>
+                    <button type="button" class="btn btn-outline-info">Saturday</button>
+                    <button type="button" class="btn btn-outline-info">Sunday</button>
+                </div>
 
-                <button type="button" class="btn btn-outline-info">Full Week</button>
-                <button type="button" class="btn btn-outline-info">Monday</button>
-                <button type="button" class="btn btn-outline-info">Tuesday</button>
-                <button type="button" class="btn btn-outline-info">Wednesday</button>
-                <button type="button" class="btn btn-outline-info">Thursday</button>
-                <button type="button" class="btn btn-outline-info">Friday</button>
-                <button type="button" class="btn btn-outline-info">Saturday</button>
-                <button type="button" class="btn btn-outline-info">Sunday</button>
-
-              </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -36,12 +41,14 @@
 
 
     <!-- Bootstrap JS script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 
     <!-- Custom JS script -->
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
 
     <!-- Ending of JS Script ----------------------------------------------------------------------------------------------------->
 </body>
+
 </html>
