--- a/index.html
+++ b/index.html
@@ -15,20 +15,31 @@
     <header>
         <nav class="navbar navbar-dark bg-dark ">
             <div class="container-fluid">
-                <div class="d-flex justify-content-sm-start">
+                <div class="d-flex align-items-stretch">
                     <a class="navbar-brand" href="#">Day-Planner</a>
                 </div>
-                <div class="d-flex justify-content-around">
+                <div class="d-flex align-items-start">
                     <button type="button" class="btn btn-outline-info">Full Week</button>
-                    <button type="button" class="btn btn-outline-info">Monday</button>
-                    <button type="button" class="btn btn-outline-info">Tuesday</button>
-                    <button type="button" class="btn btn-outline-info">Wednesday</button>
-                    <button type="button" class="btn btn-outline-info">Thursday</button>
-                    <button type="button" class="btn btn-outline-info">Friday</button>
-                    <button type="button" class="btn btn-outline-info">Saturday</button>
-                    <button type="button" class="btn btn-outline-info">Sunday</button>
+
                 </div>
 
+                <div>
+                    <button type="button" class="btn btn-outline-info">Monday</button>
+
+                    <button type="button" class="btn btn-outline-info">Tuesday</button>
+
+
+                    <button type="button" class="btn btn-outline-info">Wednesday</button>
+
+                    <button type="button" class="btn btn-outline-info">Thursday</button>
+
+                    <button type="button" class="btn btn-outline-info">Friday</button>
+
+                    <button type="button" class="btn btn-outline-info">Saturday</button>
+
+                    <button type="button" class="btn btn-outline-info">Sunday</button>
+
+                </div>
             </div>
         </nav>
     </header>
