--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    
+    <!-- JS Scripts Beginning --------------------------------------------->
+
+
+    <!-- Bootstrap JS script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+
+    <!-- Custom JS script -->
+    <script src="./assets/js/script.js"></script>
+
+    <!-- Ending of JS Script ----------------------------------------------------------------------------------------------------->
+    
 </head>
 
 <body>
@@ -24,7 +38,7 @@
                 </div>
 
                 <div>
-                    <button type="button" class="btn btn-outline-info">Monday</button>
+                    <button onclick="changeDay()">Monday</button>
 
                     <button type="button" class="btn btn-outline-info">Tuesday</button>
 
@@ -47,19 +61,6 @@
 
     </main>
 
-    <!-- JS Scripts Beginning --------------------------------------------->
-
-
-
-    <!-- Bootstrap JS script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
-
-    <!-- Custom JS script -->
-    <script src="./assets/js/script.js"></script>
-
-    <!-- Ending of JS Script ----------------------------------------------------------------------------------------------------->
 </body>
 
 </html>
