edited onClick function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="./assets/js/script.js"></script>
 
     <!-- Ending of JS Script ----------------------------------------------------------------------------------------------------->
-    
+
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                 </div>
 
                 <div>
-                    <button onclick="changeDay()">Monday</button>
+                    <button onClick="changeDay()">Monday</button>
 
                     <button type="button" class="btn btn-outline-info">Tuesday</button>
 
