edited onClick function

--- a/index.html
+++ b/index.html
@@ -38,20 +38,19 @@
                 </div>
 
                 <div>
-                    <button onClick="changeDay()">Monday</button>
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Monday</button>
 
-                    <button type="button" class="btn btn-outline-info">Tuesday</button>
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Tuesday</button>
 
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Wednesday</button>
 
-                    <button type="button" class="btn btn-outline-info">Wednesday</button>
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Thursday</button>
 
-                    <button type="button" class="btn btn-outline-info">Thursday</button>
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Friday</button>
 
-                    <button type="button" class="btn btn-outline-info">Friday</button>
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Saturday</button>
 
-                    <button type="button" class="btn btn-outline-info">Saturday</button>
-
-                    <button type="button" class="btn btn-outline-info">Sunday</button>
+                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Sunday</button>
 
                 </div>
             </div>
