added javaScript to generate card for To Do items

--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
                 </div>
 
                 <div>
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Monday</button>
+                    <button id = "monday" onClick="changeDay()" type="button" class="btn btn-outline-info">Monday</button>
 
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Tuesday</button>
+                    <button id = "tuesday" onClick="changeDay()" type="button" class="btn btn-outline-info">Tuesday</button>
 
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Wednesday</button>
+                    <button id = "wednesday" onClick="changeDay()" type="button" class="btn btn-outline-info">Wednesday</button>
 
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Thursday</button>
+                    <button id = "thursday" onClick="changeDay()" type="button" class="btn btn-outline-info">Thursday</button>
 
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Friday</button>
+                    <button id = "friday" onClick="changeDay()" type="button" class="btn btn-outline-info">Friday</button>
 
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Saturday</button>
+                    <button id = "saturday" onClick="changeDay()" type="button" class="btn btn-outline-info">Saturday</button>
 
-                    <button onClick="changeDay()" type="button" class="btn btn-outline-info">Sunday</button>
+                    <button id = "sunday" onClick="changeDay()" type="button" class="btn btn-outline-info">Sunday</button>
 
                 </div>
             </div>
         </nav>
     </header>
     <main>
-
+        <div class="container"></div>
     </main>
 
 </body>
