added addTodo button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </nav>
     </header>
     <main>
+        <button id = "addButton" onClick="addTodo()" type="button" class="btn btn-outline-info"> Add</button>
         <div class="container"></div>
     </main>
 
